--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ h1{margin:10px 0}
 </div>
 
 <script>
-const SHEET_URL = "https://docs.google.com/spreadsheets/d/1Ef7w4wHTjuiSEFwTBvC01ed1ANleYuZj4aI_6HVyHeg/edit?gid=0#gid=0";
+const SHEET_URL = "https://docs.google.com/spreadsheets/d/1Ef7w4wHTjuiSEFwTBvC01ed1ANleYuZj4aI_6HVyHeg/export?format=csv";
 
 fetch(SHEET_URL).then(r=>r.text()).then(t=>{
   const rows=t.split("\n").slice(1);
@@ -266,3 +266,4 @@ function closeCombo(){document.getElementById("comboPopup").style.display="none"
 
 </body>
 </html>
+
